wording first login

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <body>
         <h1>Being added h1 df</h1>
         <p>login form</p>
+        Wording needs adding 
 
     </body
             
